--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,15 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    compile files('libs/jsch-0.1.54.jar')
     compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'commons-net:commons-net:3.5' // librerias de apache (Utilidades varias)
-    compile 'commons-io:commons-io:2.5' // librerias de apache (FTP)
+    compile 'commons-net:commons-net:3.5'
+    compile 'commons-io:commons-io:2.5'
+    compile 'com.android.support:support-v4:25.1.1'
+    compile 'com.android.support:cardview-v7:+'
+    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.google.android.gms:play-services-vision:10.0.1'
+    compile 'com.google.android.gms:play-services-location:10.0.1'
     testCompile 'junit:junit:4.12'
 }
