--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,13 +40,17 @@ dependencies {
     })
 
     compile files('libs/jsch-0.1.54.jar')
+
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'commons-net:commons-net:3.5'
     compile 'commons-io:commons-io:2.5'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:cardview-v7:+'
     compile 'com.android.support:recyclerview-v7:+'
-    compile 'com.google.android.gms:play-services-vision:10.0.1'
+    // compile 'com.google.android.gms:play-services-vision:10.0.1'
     compile 'com.google.android.gms:play-services-location:10.0.1'
+    //compile 'me.dm7.barcodescanner:zxing:1.9'
+    compile 'me.dm7.barcodescanner:zbar:1.9'
     testCompile 'junit:junit:4.12'
+
 }
