--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     />
     <application
         android:allowBackup="true"
@@ -25,8 +27,10 @@
         <activity android:name=".Activities.ResumenRepartoActivity" />
         <activity android:name=".Activities.ListaNotificacionesActivity" />
         <activity android:name=".Activities.ScanBarcodeActivity" />
-        <activity android:name=".Activities.NuevaNotificacionActivity" />
-        <activity android:name=".Activities.NotificacionEntregadaActivity"></activity>
+        <activity android:name=".Activities.NuevaNotificacionActivity"
+            android:noHistory="true"/>
+        <activity android:name=".Activities.NotificacionEntregadaActivity" />
+        <activity android:name=".Activities.DetalleNotificacionActivity"></activity>
     </application>
 
 </manifest>
