--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,19 +38,19 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     compile files('libs/jsch-0.1.54.jar')
-
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'commons-net:commons-net:3.5'
+    compile 'org.apache.commons:commons-lang3:3.5'
     compile 'commons-io:commons-io:2.5'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:cardview-v7:+'
     compile 'com.android.support:recyclerview-v7:+'
-    // compile 'com.google.android.gms:play-services-vision:10.0.1'
     compile 'com.google.android.gms:play-services-location:10.0.1'
-    //compile 'me.dm7.barcodescanner:zxing:1.9'
     compile 'me.dm7.barcodescanner:zbar:1.9'
     testCompile 'junit:junit:4.12'
+    compile 'com.madgag.spongycastle:core:1.54.0.0'
+    compile 'com.madgag.spongycastle:pkix:1.54.0.0'
+    compile 'com.madgag.spongycastle:pg:1.54.0.0'
 
 }
