fallo de null pointer cuando no hay latitud y longitud

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
         config {
             keyAlias 'androiddebugkey'
             keyPassword 'abc123.'
-            storeFile file('C:/Users/JorgeCasa/.android/debug.keystore')
+            storeFile file('C:/Users/scipostal/.android/debug3.keystore')
             storePassword 'abc123.'
         }
     }
@@ -48,7 +48,6 @@ dependencies {
     })
     compile files('libs/jsch-0.1.54.jar')
     compile files('libs/ksoap2-android-assembly-3.6.2-jar-with-dependencies.jar')
-
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'commons-net:commons-net:3.5'
@@ -61,6 +60,6 @@ dependencies {
     compile 'me.dm7.barcodescanner:zbar:1.9'
     compile 'com.madgag.spongycastle:core:1.54.0.0'
     compile 'com.madgag.spongycastle:pkix:1.54.0.0'
-    compile 'com.android.support:preference-v7:25.2.0'
+    compile 'com.android.support:preference-v7:25.1.1'
     testCompile 'junit:junit:4.12'
 }
