--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,16 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
     />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".Activities.StartSessionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".Activities.MainActivity" />
         <activity android:name=".Activities.CargarRepartoActivity" />
         <activity android:name=".Activities.ResumenRepartoActivity" />
@@ -34,8 +38,6 @@
         <activity android:name=".Activities.DetalleNotificacionActivity" />
         <activity android:name=".Activities.PreferenciasActivity" />
         <activity android:name=".Activities.FirmaNotificadorActivity"></activity>
-
-
 
         <provider
             android:name="android.support.v4.content.FileProvider"
