--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,12 +31,11 @@
         <activity android:name=".Activities.ResumenRepartoActivity" />
         <activity android:name=".Activities.ListaNotificacionesActivity" />
         <activity android:name=".Activities.ScanBarcodeActivity" />
-        <activity
-            android:name=".Activities.NuevaNotificacionActivity"
-            android:noHistory="true" />
+        <activity android:name=".Activities.NuevaNotificacionActivity" android:noHistory="true" />
         <activity android:name=".Activities.NotificacionEntregadaActivity" />
         <activity android:name=".Activities.DetalleNotificacionActivity" />
         <activity android:name=".Activities.PreferenciasActivity" />
+        <activity android:name=".Activities.FotoAcuseActivity" />
         <activity android:name=".Activities.FirmaNotificadorActivity"></activity>
 
         <provider
