--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="es.correointeligente.cipostal.cimobile">
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -18,8 +17,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        tools:remove="android:appComponentFactory">
+        android:theme="@style/AppTheme">
 
         <activity android:name=".Activities.StartSessionActivity">
             <intent-filter>
